# verde

./: CMakeLists.txt  license.md
verde/: CMakeLists.txt  parser-helper.cpp  schema-node-constructors.cpp  syntax-validation.cpp  verde-exceptions.cpp  verde.hpp
verde-demo/: CMakeLists.txt  config.yaml  demo.cpp  license  old-config.yaml  old-schema.yaml  schema.yaml
yaml-cpp/: CMakeLists.txt
